Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-10137

Mesos failed to build due to error C2668 on windows with MSVC

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • master
    • 1.11.0
    • build

    Description

      Hi All,

      I tried to build Mesos on Windows with VS2019. It failed to build due to error C2668: 'os::spawn': ambiguous call to overloaded function on Windows using MSVC. It can be reproduced on latest reversion d4634f4 on master branch. Could you please take a look at this isssue? Thanks a lot!

       

      Reproduce steps:

      1.  git clone -c core.autocrlf=true https://github.com/apache/mesos F:\gitP\apache\mesos
      2.  Open a VS 2019 x64 command prompt as admin and browse to F:\gitP\apache\mesos
      3.  mkdir build_amd64 && pushd build_amd64

      4.  cmake -G "Visual Studio 16 2019" -A x64 -DCMAKE_SYSTEM_VERSION=10.0.18362.0 -DENABLE_LIBEVENT=1 -DHAS_AUTHENTICATION=0 -DPATCHEXE_PATH="F:\tools\gnuwin32\bin" -T host=x64 ..

      5.  set CL=/D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING %CL%

      6.  msbuild /maxcpucount:4 /p:Platform=x64 /p:Configuration=Debug Mesos.sln /t:Rebuild

       

      ErrorMessage:

      F:\gitP\apache\mesos\3rdparty\stout\include\stout/os/windows/shell.hpp(168,68): error C2668: 'os::spawn': ambiguous call to overloaded function (compiling source file F:\gitP\apache\mesos\3rdparty\libprocess\src\authenticator.cpp) [F:\gitP\apache\mesos\build_amd64\3rdparty\libprocess\src\process.vcxproj]

       

       

      Attachments

        1. build.log
          1.68 MB
          LinGao

        Activity

          People

            bmahler Benjamin Mahler
            spacelg LinGao
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: